Change GraalVM native-image runtime