@@ -18,6 +18,7 @@
 
 package io.ballerina.c2c.test.samples;
 
+import io.ballerina.c2c.DockerGenConstants;
 import io.ballerina.c2c.KubernetesConstants;
 import io.ballerina.c2c.exceptions.KubernetesPluginException;
 import io.ballerina.c2c.test.utils.KubernetesTestUtils;
@@ -101,7 +102,7 @@ public class NativeTest extends SampleTest {
         Assert.assertEquals(deployment.getSpec().getTemplate().getSpec().getContainers().size(), 1);
 
         // Assert Containers
-        Container container = deployment.getSpec().getTemplate().getSpec().getContainers().get(0);
+        Container container = deployment.getSpec().getTemplate().getSpec().getContainers().getFirst();
         Assert.assertEquals(container.getImage(), DOCKER_IMAGE);
         Assert.assertEquals(container.getPorts().size(), 1);
     }
@@ -113,10 +114,10 @@ public class NativeTest extends SampleTest {
         Assert.assertEquals("hello-svc", service.getMetadata().getName());
         Assert.assertEquals("ClusterIP", service.getSpec().getType());
         Assert.assertEquals(1, service.getSpec().getPorts().size());
-        Assert.assertEquals(9090, service.getSpec().getPorts().get(0).getPort().intValue());
-        Assert.assertEquals(9090, service.getSpec().getPorts().get(0).getTargetPort().getIntVal().intValue());
-        Assert.assertEquals("TCP", service.getSpec().getPorts().get(0).getProtocol());
-        Assert.assertEquals("port-1-hello-sv", service.getSpec().getPorts().get(0).getName());
+        Assert.assertEquals(9090, service.getSpec().getPorts().getFirst().getPort().intValue());
+        Assert.assertEquals(9090, service.getSpec().getPorts().getFirst().getTargetPort().getIntVal().intValue());
+        Assert.assertEquals("TCP", service.getSpec().getPorts().getFirst().getProtocol());
+        Assert.assertEquals("port-1-hello-sv", service.getSpec().getPorts().getFirst().getName());
     }
 
     @Test
@@ -124,10 +125,10 @@ public class NativeTest extends SampleTest {
         File dockerFile = DOCKER_TARGET_PATH.resolve("Dockerfile").toFile();
         Assert.assertTrue(dockerFile.exists());
         String content = Files.readString(dockerFile.toPath(), StandardCharsets.UTF_8);
-        Assert.assertTrue(content.contains("RUN native-image -jar hello.jar -H:Name=hello --no-fallback " +
+        Assert.assertTrue(content.contains("RUN native-image -jar hello.jar -o hello --no-fallback " +
                 "-H:+StaticExecutableWithDynamicLibC"));
-        Assert.assertTrue(content.contains("FROM ghcr.io/graalvm/native-image-community:21-ol9 as build"));
-        Assert.assertTrue(content.contains("FROM gcr.io/distroless/base"));
+        Assert.assertTrue(content.contains("FROM " + DockerGenConstants.NATIVE_BUILDER_IMAGE + " as build"));
+        Assert.assertTrue(content.contains("FROM " + DockerGenConstants.NATIVE_RUNTIME_BASE_IMAGE));
     }
 
     @Test
